erDiagram
    USERS ||--o{ REGISTRATIONS : "dokter menangani"
    USERS ||--o{ MEDICAL_RECORDS : "dokter memeriksa"
    PATIENTS ||--o{ REGISTRATIONS : "mendaftar"
    PATIENTS ||--o{ MEDICAL_RECORDS : "memiliki riwayat"
    POLYCLINICS ||--o{ REGISTRATIONS : "poli tujuan"
    REGISTRATIONS ||--o| QUEUES : "memiliki antrean"
    REGISTRATIONS ||--o| MEDICAL_RECORDS : "memiliki pemeriksaan SOAP"
    MEDICAL_RECORDS ||--o{ MEDICAL_ACTIONS : "memiliki tindakan"
    MEDICAL_RECORDS ||--o{ PRESCRIPTIONS : "memiliki resep"

    USERS {
        uuid id PK
        varchar username UK "login"
        varchar email UK
        varchar password "hashed"
        varchar name
        enum role "administrator | dokter | petugas_pendaftaran"
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    PATIENTS {
        uuid id PK
        varchar medical_record_number UK "RM-YYYYMM-XXXX"
        varchar nik UK "16 digit"
        varchar name
        enum gender "L | P"
        date birth_date
        varchar phone
        text address
        timestamp created_at
        timestamp updated_at
    }

    POLYCLINICS {
        uuid id PK
        varchar name UK
        text description
        timestamp created_at
        timestamp updated_at
    }

    REGISTRATIONS {
        uuid id PK
        uuid patient_id FK
        uuid doctor_id FK
        uuid polyclinic_id FK
        date registration_date
        enum payment_type "umum | bpjs | asuransi"
        text complaint
        enum status "menunggu | check_in | pemeriksaan | selesai"
        timestamp created_at
        timestamp updated_at
    }

    QUEUES {
        uuid id PK
        uuid registration_id FK,UK
        varchar queue_number "U001 / G001"
        enum status "menunggu | dipanggil | pemeriksaan | selesai | lewat"
        timestamp called_at
        timestamp created_at
        timestamp updated_at
    }

    MEDICAL_RECORDS {
        uuid id PK
        uuid registration_id FK,UK
        uuid patient_id FK
        uuid doctor_id FK
        text subjective "S"
        varchar objective_blood_pressure "O"
        decimal objective_temperature
        decimal objective_weight
        decimal objective_height
        text assessment "A"
        text plan "P"
        timestamp created_at
        timestamp updated_at
    }

    MEDICAL_ACTIONS {
        uuid id PK
        uuid medical_record_id FK
        varchar action_name
        text action_description
        decimal cost
        timestamp created_at
    }

    PRESCRIPTIONS {
        uuid id PK
        uuid medical_record_id FK
        varchar drug_name
        varchar dosage
        integer quantity
        text instructions
        timestamp created_at
    }
